Bug 343327 - Kate doesn't see font & color schema files
Summary: Kate doesn't see font & color schema files
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 366018 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-26 13:14 UTC by Marko M.
Modified: 2016-07-24 11:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marko M. 2015-01-26 13:14:30 UTC
I have just upgraded my Archlinux KDE the process upgraded Kate to version 5.0.0. using KDE Frameworks 5.6.0. I have noticed that schemas that I made myself in previous version have disappeared and that just default schemas exist. I re-created one of those schemas, exported it in order to be used on other Arch/KDE installations. Just to be sure I tried re-importing my newly created schema but when I open up Import and go to dir containing MySchema.kateschema file Kate fails to see anything thus I can't import it. The same happened when I moved file to another computer(also upgraded to Kate 5.0.0.) and tried to import schema. I have checked and file permissions are OK.

Reproducible: Always

Steps to Reproduce:
1. Alter any of the existing schemas in Kate
2. Export it somewhere as .kateschema
3. Remove it from Kate so that it can be imported from file
4. Go to Settings --> Configure Kate --> Fonts & Colors --> Import and browse to the location where the file was saved earlier
5 Kate fails to see any schema files.

Actual Results:  
Kate doesn't see schema file.

Expected Results:  
Kate should be able to import theme from any *.kateschema file.

So far the only solution is so manually re-create desired schema.
Comment 1 Ivan Pavlov 2015-09-21 09:49:37 UTC
Have this bug on Fedora 22 KDE spin
Comment 2 Ivan Shapovalov 2016-03-30 15:37:35 UTC
Git commit c56422f3d63dbb3bf01eca53dafd47cba049dad6 by Ivan Shapovalov.
Committed on 30/03/2016 at 14:34.
Pushed by shapovalov into branch 'master'.

kateschemaconfig.cpp: use correct filters with open/save dialogs
REVIEW: 127529

M  +4    -4    src/schema/kateschemaconfig.cpp

http://commits.kde.org/ktexteditor/c56422f3d63dbb3bf01eca53dafd47cba049dad6
Comment 3 Burkhard Lück 2016-07-24 11:36:24 UTC
*** Bug 366018 has been marked as a duplicate of this bug. ***