kateschemaconfig.cpp: use correct filters with open/save dialogs

BUG: 343327
REVIEW: 127529